@@ -91,8 +91,17 @@ public abstract class Tile {
 	
 	/** What happens when you are inside the tile (ex: lava) */
 	public void steppedOn(Level level, int xt, int yt, Entity entity) {}
-	
-	/** What happens when you hit an item on a tile (ex: Pickaxe on rock) */
+
+	/**
+	 * Called when you hit an item on a tile (ex: Pickaxe on rock).
+	 * @param level The level the player is on.
+	 * @param xt X position of the player in tile coordinates (32x per tile).
+	 * @param yt Y position of the player in tile coordinates (32px per tile).
+	 * @param player The player who called this method.
+	 * @param item The item the player is currently holding.
+	 * @param attackDir The direction of the player attacking.
+	 * @return Was the operation successful?
+	 */
 	public boolean interact(Level level, int xt, int yt, Player player, Item item, Direction attackDir) {
 		return false;
 	}
